* Dialer (ECCP): merge in-progress support for CallbackLogin-style agents.
  Currently the supported agents are SIP and IAX2 extensions. The agents must be
  declared at the Callback Extensions module under Call Center-->Agent Options,
  and also added as Dynamic Members of the queues to use for the campaigns, as
  S4321 (for extension SIP/4321) or I4321 (for extension IAX2/4321). The 
  extensions will be added with QueueAdd at login and will only ring if a call
  enters the corresponding queue.
* Dialer (ECCP): add and document call progress events. Rework call progress
  logging so that the campaign ID is available. Add a new request 'callprogress'
  to enable call progress events, which are disabled by default.
* Dialer: add logging capability of events that happen to a call. For this a 
  new database table was created. Allow campaign deletion to cope with the new
  table. This is required functionality for call progress events.
* Dialer: add new column calls.trunk to keep track of trunk used for outgoing
  call. Add outgoing trunk support to dialer code. This is required for planned
  functionality of trunk display of in-progress calls.
* Agent Console: use the new getchanvars request to add the list of channel
  variables to the ones available in an external URL. This allows variables set
  via custom contexts or AGIs to be used to drive external URLs.
* Dialer (ECCP): add a new request 'getchanvars'. This request lists the channel
  variables of the call currently handled by the agent.
* Agent Console: expose the Uniqueid of the linked call as an additional 
  variable for External URL.
* Login Logout: fix issue of report export displaying only a single page.
* Login Logout: add consistency checks on audit records to counter the situation
  where an abnormal termination of the dialer leaves unclosed audit records.
  Inconsistent records are now displayed as CORRUPTED instead of adding invalid
  values as if they were valid ONLINE records.